# blog

./: .gitignore  .travis.yml  Makefile  Pipfile  README.md  conf.py  index.md  index.rst  mkdocs.yml  pelicanconf.py  pyproject.toml  travis_addS3ID.py  travis_deploy.sh
.github/workflows/: publish.yml
blog/: 2023-01-17.md  2023-02-15.md  index.md  init.md
content/: home.md
content/articles/: 2020-reading-list.md  4-4-20-africa-time.md  fishing-and-data.md  one-year-at-zego.md  post-ideas.md
content/pages/: about.md  home.md
content/podcasts/: a16z_rebelious_talent.md
content/university-of-life/: introduction.md
docs/: index.md
docs/blog/: index.md
docs/blog/posts/: 2023-01-17.md  2023-02-15.md
docs/stoves/: index.md
docs/stoves/articles/british-military-no-6/: index.md
docs/stoves/articles/optimus-111/: index.md
stoves/: british_military_no_6.md  index.md  optimus_111.md
themes/brutalist/static/css/: main.css  main.css.map
themes/brutalist/static/css/sass/: main.sass
themes/brutalist/templates/: article.html  base.html  page.html
