[tool.poetry]
name = "blog"
version = "0.1.0"
description = "Ken Paynes personal blog."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^4.5.0"
myst-parser = "^0.17.2"
ablog = "^0.10.25"
sphinx-book-theme = "^0.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
