[tool.poetry]
name = "blog"
version = "0.1.0"
description = "Just another personal blog."
authors = ["Ken Payne <me@kenpayne.co.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.10"
mkdocs-glightbox = "^0.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
